[gd_scene load_steps=14 format=3 uid="uid://dncm3xa0wyx74"]

[ext_resource type="Script" path="res://Scripts/UI/game_won.gd" id="1_xqodn"]
[ext_resource type="Theme" uid="uid://pv4evjjac8wt" path="res://Assets/general_theme.tres" id="2_34uky"]
[ext_resource type="PackedScene" uid="uid://8to1qmbdos4" path="res://Scenes/menus/items_horizontal_container.tscn" id="3_dw2y5"]
[ext_resource type="PackedScene" uid="uid://duv7i8yak343i" path="res://Scenes/menus/HUD.tscn" id="4_ks73i"]
[ext_resource type="Script" path="res://Scripts/UI/Pause_menu.gd" id="5_4r02n"]
[ext_resource type="PackedScene" uid="uid://bigg81dibglne" path="res://Scenes/menus/options_menu.tscn" id="6_plre3"]
[ext_resource type="PackedScene" uid="uid://dc0xlg20ucy3n" path="res://Scenes/menus/catalog.tscn" id="7_6wkc5"]
[ext_resource type="PackedScene" uid="uid://dxlj826ndney4" path="res://Scenes/map/transition_camera.tscn" id="8_rw2u7"]
[ext_resource type="AudioStream" uid="uid://7cqyifbigt20" path="res://Assets/Audio/background music/end_screen_loop.mp3" id="9_p1pxg"]

[sub_resource type="Animation" id="Animation_27xwy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_hdwk4"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jlyk7"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1oyi"]
_data = {
"RESET": SubResource("Animation_27xwy"),
"fade_in": SubResource("Animation_hdwk4"),
"fade_out": SubResource("Animation_jlyk7")
}

[node name="Game_won" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_xqodn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG color" type="ColorRect" parent="CanvasLayer"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Text and stats" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title text" type="Label" parent="CanvasLayer/Text and stats"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -300.0
offset_right = 230.0
offset_bottom = -255.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 48
text = "Dungeon conquered!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="VBoxContainer" parent="CanvasLayer/Text and stats"]
layout_mode = 1
anchors_preset = -1
anchor_left = 16.075
anchor_top = 5.525
anchor_right = 16.075
anchor_bottom = 5.525
offset_left = -527.0
offset_top = -216.0
offset_right = -245.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CanvasLayer/Text and stats/Stats"]
layout_mode = 2
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 32
text = "Stats:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health Gained" type="Label" parent="CanvasLayer/Text and stats/Stats"]
layout_mode = 2
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 32
text = "Health Gained: 000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageTaken" type="Label" parent="CanvasLayer/Text and stats/Stats"]
layout_mode = 2
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 32
text = "Damage Taken: 000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemies_Killed" type="Label" parent="CanvasLayer/Text and stats/Stats"]
layout_mode = 2
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 32
text = "Enemies Killed: 000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Damage Dealt" type="Label" parent="CanvasLayer/Text and stats/Stats"]
layout_mode = 2
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 32
text = "Damage Dealt: 0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons_container" type="VBoxContainer" parent="CanvasLayer/Text and stats"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = 177.0
offset_right = -382.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="CanvasLayer/Text and stats/Buttons_container"]
layout_mode = 2

[node name="replay_button" type="Button" parent="CanvasLayer/Text and stats/Buttons_container/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -13.0
offset_right = 54.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.733, 0.733)
theme = ExtResource("2_34uky")
action_mode = 0
text = "Replay"

[node name="Control2" type="Control" parent="CanvasLayer/Text and stats/Buttons_container"]
layout_mode = 2

[node name="MainMenu_button" type="Button" parent="CanvasLayer/Text and stats/Buttons_container/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -13.0
offset_right = 54.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.733, 0.733)
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 0
action_mode = 0
text = "Main Menu"

[node name="Items_used_text" type="Label" parent="CanvasLayer/Text and stats"]
layout_mode = 2
offset_left = -185.0
offset_top = -216.0
offset_right = 583.0
offset_bottom = -186.0
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 32
text = "Items Used:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Items_verticle_container" type="VBoxContainer" parent="CanvasLayer/Text and stats"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -111.0
offset_right = 583.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 130

[node name="no_Items_used_text" type="Label" parent="CanvasLayer/Text and stats/Items_verticle_container"]
visible = false
layout_mode = 2
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 32
text = "No items were used"
horizontal_alignment = 1
vertical_alignment = 1

[node name="items_horizontal_container" parent="CanvasLayer/Text and stats/Items_verticle_container" instance=ExtResource("3_dw2y5")]
layout_mode = 2

[node name="Fade_color" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Fade_color"]
libraries = {
"": SubResource("AnimationLibrary_k1oyi")
}

[node name="Fade_timer" type="Timer" parent="CanvasLayer/Fade_color"]
wait_time = 2.5

[node name="HUD" parent="CanvasLayer" instance=ExtResource("4_ks73i")]
unique_name_in_owner = true
visible = false

[node name="Pause_menu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.25, 3.25)
script = ExtResource("5_4r02n")

[node name="color_rect" type="ColorRect" parent="CanvasLayer/Pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -886.154
offset_bottom = -498.462
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.827451)

[node name="Label" type="Label" parent="CanvasLayer/Pause_menu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 19.6923
offset_right = -886.0
offset_bottom = 49.6923
grow_horizontal = 2
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1

[node name="Buttons_container" type="VBoxContainer" parent="CanvasLayer/Pause_menu"]
layout_mode = 0
offset_left = 159.385
offset_top = 80.0
offset_right = 239.385
offset_bottom = 167.0
theme_override_constants/separation = 22

[node name="Control" type="Control" parent="CanvasLayer/Pause_menu/Buttons_container"]
layout_mode = 2

[node name="Resume_button" type="Button" parent="CanvasLayer/Pause_menu/Buttons_container/Control"]
layout_mode = 2
offset_right = 108.0
offset_bottom = 26.0
scale = Vector2(0.733, 0.733)
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 0
action_mode = 0
text = "Resume"

[node name="Control4" type="Control" parent="CanvasLayer/Pause_menu/Buttons_container"]
layout_mode = 2

[node name="Catalog_button" type="Button" parent="CanvasLayer/Pause_menu/Buttons_container/Control4"]
layout_mode = 2
offset_right = 109.0
offset_bottom = 26.0
scale = Vector2(0.733, 0.733)
theme = ExtResource("2_34uky")
action_mode = 0
text = "Catalog"

[node name="Control3" type="Control" parent="CanvasLayer/Pause_menu/Buttons_container"]
layout_mode = 2

[node name="Options_button" type="Button" parent="CanvasLayer/Pause_menu/Buttons_container/Control3"]
layout_mode = 2
offset_right = 108.0
offset_bottom = 26.0
scale = Vector2(0.733, 0.733)
theme = ExtResource("2_34uky")
action_mode = 0
text = "Options"

[node name="Control2" type="Control" parent="CanvasLayer/Pause_menu/Buttons_container"]
layout_mode = 2

[node name="MainMenu_button" type="Button" parent="CanvasLayer/Pause_menu/Buttons_container/Control2"]
layout_mode = 2
offset_right = 108.0
offset_bottom = 26.0
scale = Vector2(0.733, 0.733)
theme = ExtResource("2_34uky")
theme_override_font_sizes/font_size = 0
action_mode = 0
text = "Main Menu"

[node name="Options_menu" parent="CanvasLayer" instance=ExtResource("6_plre3")]
visible = false

[node name="Catalog" parent="CanvasLayer" instance=ExtResource("7_6wkc5")]
visible = false

[node name="Transition Camera" parent="." instance=ExtResource("8_rw2u7")]

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_p1pxg")
volume_db = -2.0
bus = &"Music"

[connection signal="pressed" from="CanvasLayer/Text and stats/Buttons_container/Control/replay_button" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Text and stats/Buttons_container/Control2/MainMenu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="timeout" from="CanvasLayer/Fade_color/Fade_timer" to="." method="_on_fade_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Pause_menu/Buttons_container/Control/Resume_button" to="CanvasLayer/Pause_menu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_menu/Buttons_container/Control4/Catalog_button" to="CanvasLayer/Pause_menu" method="_on_catalog_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_menu/Buttons_container/Control3/Options_button" to="CanvasLayer/Pause_menu" method="_on_options_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_menu/Buttons_container/Control2/MainMenu_button" to="CanvasLayer/Pause_menu" method="_on_main_menu_button_pressed"]
